k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: secureflow
  labels:
    name: secureflow
    env: dev
